added osf processor draft

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 DATABASE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
+OSF_URL='https://staging-metadata.osf.io/v1/'  # optional
+OSF_TOKEN='<token>'  # optional
