implemented initial version of osf processor

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 DATABASE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 OSF_URL='https://staging-metadata.osf.io/v1/'  # optional
-OSF_TOKEN='<token>'  # optional
+OSF_KEY='<personal_token>'  # optional
+OSF_NAMESPACE='<namespace>'  # optional
